# fruitcut

./: 404.html  CHANGELOG  CMakeLists.txt  LICENSE  README.markdown  animation.hpp  cancel.html  compile_and_install_fruitcut  counted_reference.hpp  create_rng.cpp  cursor_trail.cpp  cursor_trail.hpp  cursor_trail_fwd.hpp  cut_mesh.cpp  cut_mesh.hpp  cut_test.cpp  damped_oscillation.cpp  damped_oscillation.hpp  delayed_ptr_sequence.hpp  design.org  dim2.hpp  exception.cpp  exception.hpp  fruitcut.css  gizmo.hpp  index.html  line_simplifier.hpp  machine.cpp  machine.hpp  mat4.hpp  media_path.cpp  media_path.hpp  mesh.hpp  mesh_fwd.hpp  mesh_to_vertex_buffer.cpp  mesh_to_vertex_buffer.hpp  model_to_mesh.cpp  model_to_mesh.hpp  notizen.org  plane.hpp  (+16 more)
fruitapp/: CMakeLists.txt
fruitapp/fruitapp_media/: LICENSE  config.json  cursor.json  fonts.json  fruits.json  graphics_presets.json  highscore_providers.json  light.json
fruitapp/fruitapp_media/fonts/: big.font  huge.font  normal.font  small.font
fruitapp/fruitapp_media/gui/: fruitapp.project  fruitcut.imageset  fruitcut.looknfeel  fruitcut.scheme
fruitapp/fruitapp_media/models/: cannonball.md3  coin.md3
fruitapp/fruitapp_media/shaders/: background.cg  model_shadow.cg
fruitapp/include/fruitapp/: background.hpp  background_fwd.hpp  config_variables.hpp  cursor_sound.hpp  cursor_trail.hpp  cut_context_fwd.hpp  directional_light_source.hpp  directional_light_source_from_json.hpp  directional_light_source_fwd.hpp  exception.hpp  ingame_timer.hpp  load_user_config.hpp  logo.hpp  machine.hpp  machine_fwd.hpp  machine_impl.hpp  main.hpp  media_path.hpp  overlay.hpp  postprocessing.hpp  postprocessing_fwd.hpp  quick_log.hpp  renderable.hpp  renderer_dim2.hpp  renderer_rect.hpp  scoped_pp_activation.hpp  screen_shooter.hpp  shadow_map.hpp  shadow_map_texture.hpp  shadow_mvp.hpp  splatter_generator.hpp  sword_trail.hpp  systems.hpp
fruitapp/src/: asio_implementation.cpp  background.cpp  config.hpp.in  config_variables.cpp  cursor_trail.cpp  directional_light_source.cpp  directional_light_source_from_json.cpp  load_user_config.cpp  logo.cpp  machine.cpp  machine_impl.cpp  main.cpp  media_path.cpp  name.cpp  overlay.cpp  postprocessing.cpp  quick_log.cpp  renderable.cpp  scene.cpp  screen_shooter.cpp  shadow_map.cpp  splatter_generator.cpp  sword_trail.cpp
fruitapp/src/background/: base.cpp  cg.cpp  ffp.cpp  node.cpp
fruitapp/src/config_variables/: object.cpp
fruitapp/src/cursor/: instance.cpp  instance_sequence.cpp  manager.cpp  sampler.cpp  sound.cpp  sword_trail.cpp
fruitapp/src/font_particle/: manager.cpp  object.cpp
fruitapp/src/fruit/: calculate_cut_geometry.cpp  calculate_new_linear_velocity.cpp  cut_context.cpp  cut_geometry.cpp  cut_mesh.cpp  cut_mesh_result.cpp  default_render_node.cpp  manager.cpp  mesh_to_point_cloud.cpp  mesh_to_shape.cpp  mesh_to_vertex_buffer.cpp  model_to_mesh.cpp  object.cpp  object_from_prototype.cpp  prototype.cpp  prototype_from_json.cpp  shadow_render_node.cpp  spawner.cpp
fruitapp/src/game_logic/: object.cpp
fruitapp/src/graphics_settings/: object.cpp
fruitapp/src/gui/: create_system.cpp
fruitapp/src/highscore/: entry.cpp  entry_set_to_json.cpp  get_model.cpp  json_to_entry_set.cpp  post_model.cpp  providers_from_json.cpp
fruitapp/src/light/: directional_light_source.cpp  directional_light_source_from_json.cpp  manager.cpp
fruitapp/src/point_sprite/: base.cpp  system_node.cpp
fruitapp/src/postprocessing/: create_system.cpp  dummy.cpp  system.cpp
fruitapp/src/projection_manager/: object.cpp
fruitapp/src/shadow_map/: object.cpp
fruitapp/src/states/: loading.cpp
fruitapp/src/viewport/: manager.cpp
fruitlib/: CMakeLists.txt
fruitlib/include/fruitlib/: average_colors.hpp  basic_scoped_ostream_file_redirection_decl.hpp  basic_scoped_ostream_file_redirection_fwd.hpp  basic_scoped_ostream_file_redirection_impl.hpp  counted_reference.hpp  counted_reference_decl.hpp  counted_reference_fwd.hpp  counted_reference_impl.hpp  create_command_line_parameters.hpp  def_ctor.hpp  delayed_ptr_sequence.hpp  exception.hpp  fcppt_string_to_utf8_file.hpp  human_readable_time_difference.hpp  message_box.hpp  optional_perspective_projection_information.hpp  performance_timer.hpp  perspective_projection_information.hpp  perspective_projection_information_to_matrix.hpp  random_generator.hpp  scoped_frame_limiter.hpp  scoped_ostream_file_redirection.hpp  scoped_wostream_file_redirection.hpp  texture_manager.hpp  texture_manager_fwd.hpp  uniform_int_random.hpp  uniform_random_range_element.hpp  uniform_random_range_element_decl.hpp  (+5 more)
fruitlib/src/: average_colors.cpp  exception.cpp  human_readable_time_difference.cpp  media_path.cpp  message_box.cpp  performance_timer.cpp  scoped_frame_limiter.cpp  texture_manager.cpp  utf8_file_to_fcppt_string.cpp  utf8_file_to_fcppt_string_exn.cpp
fruitserver/: CMakeLists.txt
fruitserver/src/: server.cpp
sandbox/: CMakeLists.txt  animation.hpp  bloom.cpp  bloom_shader.cpp  bloom_shader.hpp  blur.cpp  blur_filter.cpp  blur_filter.hpp  convolution.cpp  doppler.cpp  duration_string.cpp  font.cpp  font_drawer.cpp  font_drawer.hpp  font_transform_callback.hpp  geometry.cpp  mouse_cut.cpp  mouse_trailer.cpp  mouse_trailer.hpp  particle.cpp  particle.hpp  pipeline.cpp  splat.cpp  splat_collector.cpp  splat_collector.hpp  splat_particle.cpp  splat_particle.hpp  splatter.cpp  splatter.hpp  sword_particle.cpp  sword_particle.hpp  termcolor.cpp  termcolor.hpp  trail_test.cpp
sandbox/cut_test/: cut_test.cpp  input_states.hpp  machine.cpp  machine.hpp
sandbox/duration_string/: duration_string.cpp
sandbox/json_output/: json_output.cpp
sandbox/pp/: dependency_set.hpp  scene_render_callback.hpp  system.cpp  system.hpp
sandbox/rectangle_magic/: main.cpp
sandbox/screen_vf/: create_quad.cpp  create_quad.hpp  format.hpp  position.hpp  vertex_view.hpp
src/sandbox/: CMakeLists.txt  convolution.cpp  font.cpp  geometry.cpp  mouse_trailer.hpp  splat.cpp  splat_collector.hpp  splat_particle.hpp  trail_test.cpp
test/: CMakeLists.txt  delayed_sequence.cpp  math.cpp
(+2948 files in other folders)
