cmake_minimum_required(VERSION 2.6)

project(
  fruitcut)

include(
  FcpptCMakeUtils)

include(
  FindFcpptThreads)

include(
  AwlMainGenerator)

find_package(
	Boost 1.49.0 REQUIRED COMPONENTS
	chrono
	date_time
	thread
	system)

include_directories(
  ${Boost_INCLUDE_DIR})
link_directories(
  ${Boost_LIBRARY_DIRS})

add_definitions(
        -D BOOST_ASIO_SEPARATE_COMPILATION)
# boost end

# fcppt begin
find_package(
  Fcppt REQUIRED)
include_directories(
  ${Fcppt_INCLUDE_DIRS})
ADD_DEFINITIONS(
  ${Fcppt_DEFINITIONS})
# fcppt end

# awl begin
find_package(
  Awl REQUIRED)
include_directories(
  ${Awl_INCLUDE_DIR})
add_definitions(
  ${Awl_DEFINITIONS})
# awl end

# mizuiro begin
find_package(
  Mizuiro REQUIRED)
include_directories(
  ${Mizuiro_INCLUDE_DIR})
add_definitions(
  ${Mizuiro_DEFINITIONS})
# mizuiro end

# bullet begin
find_package(
  Bullet REQUIRED)
include_directories(
  ${BULLET_INCLUDE_DIRS})
# bullet end

# cg begin
find_package(
	Cg REQUIRED)
include_directories(
	${Cg_INCLUDE_DIR})
add_definitions(
	${Cg_DEFINITIONS})
# cg end

# sge begin
FIND_PACKAGE(
	SGE REQUIRED COMPONENTS
	audio
	camera
	cegui
	charconv
	cg
	config
	console
	core
	fontdraw
	fontbitmap
	font
	image
	image2d
	input
	line_drawer
	log
	modelmd3
	parse
	renderer
	shader
	sprite
	systems
	texture
	viewport
	window)

include_directories(${SGE_INCLUDE_DIRS})
add_definitions(${SGE_DEFINITIONS})
# sge end

# cegui begin
find_package(
	CEGUI REQUIRED)

link_directories(
	"${CEGUI_LIBRARY_DIRS}")

include_directories(
  ${CEGUI_INCLUDE_DIRS})
# cegui end

# get rid of a pretty useless warning
if(CMAKE_COMPILER_IS_GNUCXX OR FCPPT_UTILS_COMPILER_IS_CLANGPP)
	add_definitions(-Wno-old-style-cast)
elseif(MSVC)
	# Disable "this" used in initializer list warning
	add_definitions("/wd4355")
endif()

set(
	INSTALL_MEDIA_DIR
	${INSTALL_DATA_DIR}/media
)

include(
	SGECustomPath
)

sge_config_add_custom_path(
	fruitcut
	media
	${CMAKE_SOURCE_DIR}/media
	${INSTALL_MEDIA_DIR}
)

install(
	DIRECTORY
	${CMAKE_SOURCE_DIR}/media/
	DESTINATION
	${INSTALL_MEDIA_DIR}
)

option(
  ENABLE_TEST "Build the tests" ON)

include_directories(
	${CMAKE_SOURCE_DIR}/include)

if(ENABLE_TEST)
	enable_testing()
	add_subdirectory(
		src/test)
endif()

add_subdirectory(
	src/sandbox)

set(
	FRUITLIB_FILES
	include/fruitlib/animation/basic.hpp
	include/fruitlib/animation/interpolate/linear.hpp
	include/fruitlib/animation/interpolate/trigonometric.hpp
	include/fruitlib/animation/keyframe.hpp
	include/fruitlib/audio/group/buffer.hpp
	include/fruitlib/audio/group/buffer_fwd.hpp
	include/fruitlib/audio/group/player.hpp
	include/fruitlib/audio/group/player_fwd.hpp
	include/fruitlib/audio/group/sound_base.hpp
	include/fruitlib/audio/group/sound_base_fwd.hpp
	include/fruitlib/audio/group/sound_positional.hpp
	include/fruitlib/audio/group/sound_positional_fwd.hpp
	include/fruitlib/audio/music_controller.hpp
	include/fruitlib/audio/music_controller_fwd.hpp
	include/fruitlib/audio/pool.hpp
	include/fruitlib/audio/sound_controller.hpp
	include/fruitlib/audio/sound_controller_fwd.hpp
	include/fruitlib/average_colors.hpp
	include/fruitlib/command_line_parameters.hpp
	include/fruitlib/counted_reference.hpp
	include/fruitlib/counted_reference_decl.hpp
	include/fruitlib/counted_reference_fwd.hpp
	include/fruitlib/counted_reference_impl.hpp
	include/fruitlib/create_command_line_parameters.hpp
	include/fruitlib/delayed_ptr_sequence.hpp
	include/fruitlib/exception.hpp
	include/fruitlib/fcppt_string_to_utf8_file.hpp
	include/fruitlib/font/align_v.hpp
	include/fruitlib/font/base_path.hpp
	include/fruitlib/font/cache.hpp
	include/fruitlib/font/cache_fwd.hpp
	include/fruitlib/font/identifier.hpp
	include/fruitlib/font/object.hpp
	include/fruitlib/font/object_parameters.hpp
	include/fruitlib/font/object_parameters_fwd.hpp
	include/fruitlib/font/scale.hpp
	include/fruitlib/font/scale_animation.hpp
	include/fruitlib/font/scene_node.hpp
	include/fruitlib/geometry_traits/box.hpp
	include/fruitlib/geometry_traits/vector.hpp
	include/fruitlib/grid/collect_points.hpp
	include/fruitlib/grid/convolve_ignore_borders.hpp
	include/fruitlib/grid/from_image.hpp
	include/fruitlib/grid/map.hpp
	include/fruitlib/grid/sobel_ignore_borders.hpp
	include/fruitlib/grid/to_ppm.hpp
	include/fruitlib/grid/zip_with.hpp
	include/fruitlib/json/parse_animation.hpp
	include/fruitlib/json/parse_color.hpp
	include/fruitlib/json/parse_projection.hpp
	include/fruitlib/json/parse_random_float_distribution.hpp
	include/fruitlib/json/parse_random_int_distribution.hpp
	include/fruitlib/json/parse_rgba8_color.hpp
	include/fruitlib/log/scoped.hpp
	include/fruitlib/log/scoped_sequence.hpp
	include/fruitlib/log/scoped_sequence_from_json.hpp
	include/fruitlib/log/scoped_sequence_ptr.hpp
	include/fruitlib/log/string_to_location.hpp
	include/fruitlib/math/box_radius.hpp
	include/fruitlib/math/cut_triangle_at_plane.hpp
	include/fruitlib/math/line/basic.hpp
	include/fruitlib/math/line/distance_to_point.hpp
	include/fruitlib/math/line_plane_intersection.hpp
	include/fruitlib/math/multiply_matrix4_vector3.hpp
	include/fruitlib/math/plane/basic.hpp
	include/fruitlib/math/plane/distance_to_point.hpp
	include/fruitlib/math/plane/from_vec4.hpp
	include/fruitlib/math/plane/normalize.hpp
	include/fruitlib/math/triangle/area.hpp
	include/fruitlib/math/triangle/basic.hpp
	include/fruitlib/math/triangle/create_from_interpolation.hpp
	include/fruitlib/math/triangle/interpolation_pair.hpp
	include/fruitlib/math/triangle/random_point.hpp
	include/fruitlib/math/triangle/scalar_type.hpp
	include/fruitlib/math/triangle/size_type.hpp
	include/fruitlib/math/triangle/to_plane.hpp
	include/fruitlib/math/triangle/vector_type.hpp
	include/fruitlib/math/triangle/vertex_access.hpp
	include/fruitlib/math/triangle/weak_compare.hpp
	include/fruitlib/math/triangle_plane_intersection.hpp
	include/fruitlib/math/unproject.hpp
	include/fruitlib/math/view_plane_distance.hpp
	include/fruitlib/math/view_plane_rect.hpp
	include/fruitlib/media_path.hpp
	include/fruitlib/optional_perspective_projection_information.hpp
	include/fruitlib/performance_timer.hpp
	include/fruitlib/perspective_projection_information.hpp
	include/fruitlib/perspective_projection_information_fwd.hpp
	include/fruitlib/perspective_projection_information_to_matrix.hpp
	include/fruitlib/physics/box.hpp
	include/fruitlib/physics/debugger.hpp
	include/fruitlib/physics/debugger_fwd.hpp
	include/fruitlib/physics/duration.hpp
	include/fruitlib/physics/group/id.hpp
	include/fruitlib/physics/group/object.hpp
	include/fruitlib/physics/group/object_fwd.hpp
	include/fruitlib/physics/group/sequence.hpp
	include/fruitlib/physics/matrix3.hpp
	include/fruitlib/physics/matrix3_to_matrix4.hpp
	include/fruitlib/physics/matrix4.hpp
	include/fruitlib/physics/matrix4_to_matrix3.hpp
	include/fruitlib/physics/nodes/debugger.hpp
	include/fruitlib/physics/nodes/world.hpp
	include/fruitlib/physics/null_collision_filter.hpp
	include/fruitlib/physics/rigid_body/angular_velocity.hpp
	include/fruitlib/physics/rigid_body/collision_callback.hpp
	include/fruitlib/physics/rigid_body/collision_callback_fn.hpp
	include/fruitlib/physics/rigid_body/collision_data.hpp
	include/fruitlib/physics/rigid_body/linear_velocity.hpp
	include/fruitlib/physics/rigid_body/mass.hpp
	include/fruitlib/physics/rigid_body/object.hpp
	include/fruitlib/physics/rigid_body/object_fwd.hpp
	include/fruitlib/physics/rigid_body/optional_mass.hpp
	include/fruitlib/physics/rigid_body/parameters.hpp
	include/fruitlib/physics/rigid_body/parameters_fwd.hpp
	include/fruitlib/physics/rigid_body/position.hpp
	include/fruitlib/physics/rigid_body/scoped.hpp
	include/fruitlib/physics/rigid_body/solidity.hpp
	include/fruitlib/physics/rigid_body/transformation.hpp
	include/fruitlib/physics/rigid_body/user_data.hpp
	include/fruitlib/physics/scalar.hpp
	include/fruitlib/physics/shared_shape_ptr.hpp
	include/fruitlib/physics/structure_cast.hpp
	include/fruitlib/physics/vector3.hpp
	include/fruitlib/physics/world.hpp
	include/fruitlib/physics/world_fwd.hpp
	include/fruitlib/pp/dependency_set.hpp
	include/fruitlib/pp/filter/add.hpp
	include/fruitlib/pp/filter/base.hpp
	include/fruitlib/pp/filter/base_fwd.hpp
	include/fruitlib/pp/filter/base_path.hpp
	include/fruitlib/pp/filter/binary.hpp
	include/fruitlib/pp/filter/blur.hpp
	include/fruitlib/pp/filter/desaturate.hpp
	include/fruitlib/pp/filter/highlight.hpp
	include/fruitlib/pp/filter/inject_texture.hpp
	include/fruitlib/pp/filter/iterations.hpp
	include/fruitlib/pp/filter/ivec2_parameter.hpp
	include/fruitlib/pp/filter/manager.hpp
	include/fruitlib/pp/filter/manager_fwd.hpp
	include/fruitlib/pp/filter/nullary.hpp
	include/fruitlib/pp/filter/render_to_texture.hpp
	include/fruitlib/pp/filter/ssaa.hpp
	include/fruitlib/pp/filter/texture_size.hpp
	include/fruitlib/pp/filter/unary.hpp
	include/fruitlib/pp/filter/wrapper.hpp
	include/fruitlib/pp/screen_vf/format.hpp
	include/fruitlib/pp/screen_vf/part.hpp
	include/fruitlib/pp/screen_vf/position.hpp
	include/fruitlib/pp/screen_vf/quad.hpp
	include/fruitlib/pp/screen_vf/vertex_view.hpp
	include/fruitlib/pp/system.hpp
	include/fruitlib/pp/system_fwd.hpp
	include/fruitlib/pp/texture/counted_instance.hpp
	include/fruitlib/pp/texture/depth_stencil_format.hpp
	include/fruitlib/pp/texture/descriptor.hpp
	include/fruitlib/pp/texture/instance.hpp
	include/fruitlib/pp/texture/instance_fwd.hpp
	include/fruitlib/pp/texture/is_locked.hpp
	include/fruitlib/pp/texture/manager.hpp
	include/fruitlib/pp/texture/manager_fwd.hpp
	include/fruitlib/pp/texture/use_screen_size.hpp
	include/fruitlib/random_generator.hpp
	include/fruitlib/random_generator_fwd.hpp
	include/fruitlib/rectangle_manager/duration.hpp
	include/fruitlib/rectangle_manager/object.hpp
	include/fruitlib/rectangle_manager/object_decl.hpp
	include/fruitlib/rectangle_manager/object_fwd.hpp
	include/fruitlib/rectangle_manager/object_impl.hpp
	include/fruitlib/rectangle_manager/padding.hpp
	include/fruitlib/rectangle_manager/rectangle_instance.hpp
	include/fruitlib/rectangle_manager/rectangle_instance_decl.hpp
	include/fruitlib/rectangle_manager/rectangle_instance_fwd.hpp
	include/fruitlib/rectangle_manager/rectangle_instance_impl.hpp
	include/fruitlib/resource_tree/from_directory_tree.hpp
	include/fruitlib/resource_tree/is_resource_tree.hpp
	include/fruitlib/resource_tree/make_type.hpp
	include/fruitlib/resource_tree/navigate_to_path.hpp
	include/fruitlib/resource_tree/node.hpp
	include/fruitlib/resource_tree/object.hpp
	include/fruitlib/resource_tree/path.hpp
	include/fruitlib/scenic/adaptors/camera.hpp
	include/fruitlib/scenic/adaptors/console.hpp
	include/fruitlib/scenic/adaptors/gui_system.hpp
	include/fruitlib/scenic/adaptors/line_drawer.hpp
	include/fruitlib/scenic/base.hpp
	include/fruitlib/scenic/base_fwd.hpp
	include/fruitlib/scenic/delta/callback.hpp
	include/fruitlib/scenic/delta/clock.hpp
	include/fruitlib/scenic/delta/clock_impl.hpp
	include/fruitlib/scenic/delta/duration.hpp
	include/fruitlib/scenic/delta/timer.hpp
	include/fruitlib/scenic/depth.hpp
	include/fruitlib/scenic/detail/has_scene_reactions.hpp
	include/fruitlib/scenic/detail/reaction_chooser.hpp
	include/fruitlib/scenic/events/base.hpp
	include/fruitlib/scenic/events/base_fwd.hpp
	include/fruitlib/scenic/events/render.hpp
	include/fruitlib/scenic/events/update.hpp
	include/fruitlib/scenic/no_parent.hpp
	include/fruitlib/scenic/node.hpp
	include/fruitlib/scenic/optional_parent.hpp
	include/fruitlib/scenic/parent.hpp
	include/fruitlib/scenic/parent_fwd.hpp
	include/fruitlib/scoped_frame_limiter.hpp
	include/fruitlib/signal_stack_printer/object.hpp
	include/fruitlib/signal_stack_printer/object_fwd.hpp
	include/fruitlib/time_format/context.hpp
	include/fruitlib/time_format/domain.hpp
	include/fruitlib/time_format/duration_to_string.hpp
	include/fruitlib/time_format/find_and_convert_duration.hpp
	include/fruitlib/time_format/formatter.hpp
	include/fruitlib/time_format/formatter_fwd.hpp
	include/fruitlib/time_format/grammar.hpp
	include/fruitlib/time_format/milliseconds.hpp
	include/fruitlib/time_format/minutes.hpp
	include/fruitlib/time_format/seconds.hpp
	include/fruitlib/time_format/string_to_duration.hpp
	include/fruitlib/time_format/string_to_duration_exn.hpp
	include/fruitlib/time_format/tags/milliseconds.hpp
	include/fruitlib/time_format/tags/minutes.hpp
	include/fruitlib/time_format/tags/seconds.hpp
	include/fruitlib/uniform_int_random.hpp
	include/fruitlib/uniform_random_range_element.hpp
	include/fruitlib/uniform_random_range_element_decl.hpp
	include/fruitlib/uniform_random_range_element_fwd.hpp
	include/fruitlib/uniform_random_range_element_impl.hpp
	include/fruitlib/uniform_real_random.hpp
	include/fruitlib/utf8_file_to_fcppt_string.hpp
	include/fruitlib/utf8_file_to_fcppt_string_exn.hpp
	src/fruitlib/audio/group/buffer.cpp
	src/fruitlib/audio/group/player.cpp
	src/fruitlib/audio/group/sound_base.cpp
	src/fruitlib/audio/group/sound_positional.cpp
	src/fruitlib/audio/music_controller.cpp
	src/fruitlib/audio/pool.cpp
	src/fruitlib/audio/sound_controller.cpp
	src/fruitlib/average_colors.cpp
	src/fruitlib/create_command_line_parameters.cpp
	src/fruitlib/exception.cpp
	src/fruitlib/fcppt_string_to_utf8_file.cpp
	src/fruitlib/font/cache.cpp
	src/fruitlib/font/object.cpp
	src/fruitlib/font/object_parameters.cpp
	src/fruitlib/font/scene_node.cpp
	src/fruitlib/json/parse_projection.cpp
	src/fruitlib/json/parse_rgba8_color.cpp
	src/fruitlib/log/scoped.cpp
	src/fruitlib/log/scoped_sequence_from_json.cpp
	src/fruitlib/log/string_to_location.cpp
	src/fruitlib/math/view_plane_distance.cpp
	src/fruitlib/math/view_plane_rect.cpp
	src/fruitlib/media_path.cpp
	src/fruitlib/performance_timer.cpp
	src/fruitlib/perspective_projection_information.cpp
	src/fruitlib/perspective_projection_information_to_matrix.cpp
	src/fruitlib/physics/debugger.cpp
	src/fruitlib/physics/group/object.cpp
	src/fruitlib/physics/nodes/debugger.cpp
	src/fruitlib/physics/nodes/world.cpp
	src/fruitlib/physics/null_collision_filter.cpp
	src/fruitlib/physics/rigid_body/collision_data.cpp
	src/fruitlib/physics/rigid_body/object.cpp
	src/fruitlib/physics/rigid_body/parameters.cpp
	src/fruitlib/physics/rigid_body/scoped.cpp
	src/fruitlib/physics/world.cpp
	src/fruitlib/pp/filter/add.cpp
	src/fruitlib/pp/filter/base.cpp
	src/fruitlib/pp/filter/binary.cpp
	src/fruitlib/pp/filter/blur.cpp
	src/fruitlib/pp/filter/desaturate.cpp
	src/fruitlib/pp/filter/highlight.cpp
	src/fruitlib/pp/filter/inject_texture.cpp
	src/fruitlib/pp/filter/manager.cpp
	src/fruitlib/pp/filter/nullary.cpp
	src/fruitlib/pp/filter/render_to_texture.cpp
	src/fruitlib/pp/filter/ssaa.cpp
	src/fruitlib/pp/filter/unary.cpp
	src/fruitlib/pp/filter/wrapper.cpp
	src/fruitlib/pp/screen_vf/quad.cpp
	src/fruitlib/pp/system.cpp
	src/fruitlib/pp/texture/descriptor.cpp
	src/fruitlib/pp/texture/instance.cpp
	src/fruitlib/pp/texture/manager.cpp
	src/fruitlib/pp/texture/use_screen_size.cpp
	src/fruitlib/resource_tree/path.cpp
	src/fruitlib/scenic/adaptors/camera.cpp
	src/fruitlib/scenic/adaptors/console.cpp
	src/fruitlib/scenic/adaptors/gui_system.cpp
	src/fruitlib/scenic/adaptors/line_drawer.cpp
	src/fruitlib/scenic/base.cpp
	src/fruitlib/scenic/delta/clock.cpp
	src/fruitlib/scenic/events/base.cpp
	src/fruitlib/scenic/events/render.cpp
	src/fruitlib/scenic/events/update.cpp
	src/fruitlib/scenic/no_parent.cpp
	src/fruitlib/scenic/parent.cpp
	src/fruitlib/scoped_frame_limiter.cpp
	src/fruitlib/signal_stack_printer/object.cpp
	src/fruitlib/time_format/milliseconds.cpp
	src/fruitlib/time_format/minutes.cpp
	src/fruitlib/time_format/seconds.cpp
	src/fruitlib/utf8_file_to_fcppt_string.cpp
	src/fruitlib/utf8_file_to_fcppt_string_exn.cpp
)

fcppt_utils_add_source_groups(
  "${FRUITLIB_FILES}")

SET(
	APP_FILES
	include/fruitapp/ambient_intensity.hpp
	include/fruitapp/background.hpp
	include/fruitapp/background_fwd.hpp
	include/fruitapp/config_variables.hpp
	include/fruitapp/config_variables_fwd.hpp
	include/fruitapp/current_commit.hpp
	include/fruitapp/cursor_sound.hpp
	include/fruitapp/cursor_trail.hpp
	include/fruitapp/cut_context_fwd.hpp
	include/fruitapp/depths/overlay.hpp
	include/fruitapp/depths/root.hpp
	include/fruitapp/depths/scene.hpp
	include/fruitapp/directional_light_source.hpp
	include/fruitapp/directional_light_source_fwd.hpp
	include/fruitapp/events/declare_transition_reaction.hpp
	include/fruitapp/events/declare_transition_type.hpp
	include/fruitapp/events/define_transition_reaction.hpp
	include/fruitapp/events/generic_transition.hpp
	include/fruitapp/events/post_transition.hpp
	include/fruitapp/events/return_post_transition_functor.hpp
	include/fruitapp/exception.hpp
	include/fruitapp/fruit/area.hpp
	include/fruitapp/fruit/box3.hpp
	include/fruitapp/fruit/callbacks/cut.hpp
	include/fruitapp/fruit/callbacks/cut_fn.hpp
	include/fruitapp/fruit/callbacks/remove.hpp
	include/fruitapp/fruit/callbacks/remove_fn.hpp
	include/fruitapp/fruit/callbacks/spawn.hpp
	include/fruitapp/fruit/callbacks/spawn_fn.hpp
	include/fruitapp/fruit/cut_context.hpp
	include/fruitapp/fruit/cut_context_fwd.hpp
	include/fruitapp/fruit/cut_context_unique_ptr.hpp
	include/fruitapp/fruit/cut_mesh.hpp
	include/fruitapp/fruit/cut_mesh_result.hpp
	include/fruitapp/fruit/cut_mesh_result_fwd.hpp
	include/fruitapp/fruit/default_render_node.hpp
	include/fruitapp/fruit/hull/intersection_pair.hpp
	include/fruitapp/fruit/hull/projected.hpp
	include/fruitapp/fruit/hull/ring.hpp
	include/fruitapp/fruit/hull/trail_intersection.hpp
	include/fruitapp/fruit/make_coordinate_system.hpp
	include/fruitapp/fruit/manager.hpp
	include/fruitapp/fruit/manager_fwd.hpp
	include/fruitapp/fruit/material/diffuse_coefficient.hpp
	include/fruitapp/fruit/material/diffuse_color.hpp
	include/fruitapp/fruit/material/from_json.hpp
	include/fruitapp/fruit/material/object.hpp
	include/fruitapp/fruit/material/specular_coefficient.hpp
	include/fruitapp/fruit/material/specular_color.hpp
	include/fruitapp/fruit/material/specular_shininess.hpp
	include/fruitapp/fruit/mesh.hpp
	include/fruitapp/fruit/mesh_fwd.hpp
	include/fruitapp/fruit/mesh_scoped_ptr.hpp
	include/fruitapp/fruit/mesh_to_point_cloud.hpp
	include/fruitapp/fruit/mesh_to_shape.hpp
	include/fruitapp/fruit/mesh_to_vertex_buffer.hpp
	include/fruitapp/fruit/mesh_unique_ptr.hpp
	include/fruitapp/fruit/model_to_mesh.hpp
	include/fruitapp/fruit/model_vf/format.hpp
	include/fruitapp/fruit/model_vf/normal.hpp
	include/fruitapp/fruit/model_vf/part.hpp
	include/fruitapp/fruit/model_vf/position.hpp
	include/fruitapp/fruit/model_vf/texcoord.hpp
	include/fruitapp/fruit/model_vf/vertex_view.hpp
	include/fruitapp/fruit/object.hpp
	include/fruitapp/fruit/object_from_prototype.hpp
	include/fruitapp/fruit/object_fwd.hpp
	include/fruitapp/fruit/object_sequence.hpp
	include/fruitapp/fruit/object_unique_ptr.hpp
	include/fruitapp/fruit/plane.hpp
	include/fruitapp/fruit/point_cloud.hpp
	include/fruitapp/fruit/prototype.hpp
	include/fruitapp/fruit/prototype_from_json.hpp
	include/fruitapp/fruit/prototype_fwd.hpp
	include/fruitapp/fruit/prototype_sequence.hpp
	include/fruitapp/fruit/prototype_unique_ptr.hpp
	include/fruitapp/fruit/shadow_render_node.hpp
	include/fruitapp/fruit/spawn_callback_fn.hpp
	include/fruitapp/fruit/spawner.hpp
	include/fruitapp/fruit/tag.hpp
	include/fruitapp/fruit/tag_set.hpp
	include/fruitapp/fruit/triangle.hpp
	include/fruitapp/fruit/triangle_traits.hpp
	include/fruitapp/game_logic/object.hpp
	include/fruitapp/gui/ce/button.hpp
	include/fruitapp/gui/ce/combobox.hpp
	include/fruitapp/gui/ce/dialogs/highscore.hpp
	include/fruitapp/gui/ce/dialogs/ingame_menu.hpp
	include/fruitapp/gui/ce/dialogs/main_menu.hpp
	include/fruitapp/gui/ce/dialogs/name_chooser.hpp
	include/fruitapp/gui/ce/dialogs/ranking.hpp
	include/fruitapp/gui/ce/dialogs/settings.hpp
	include/fruitapp/gui/ce/progress_slider.hpp
	include/fruitapp/gui/ce/system.hpp
	include/fruitapp/gui/ce/system_fwd.hpp
	include/fruitapp/gui/ce/table/column.hpp
	include/fruitapp/gui/ce/table/column_sequence.hpp
	include/fruitapp/gui/ce/table/model.hpp
	include/fruitapp/gui/ce/table/model_fwd.hpp
	include/fruitapp/gui/ce/table/row.hpp
	include/fruitapp/gui/ce/table/row_added.hpp
	include/fruitapp/gui/ce/table/row_added_fn.hpp
	include/fruitapp/gui/ce/table/row_index.hpp
	include/fruitapp/gui/ce/table/row_removed.hpp
	include/fruitapp/gui/ce/table/row_removed_fn.hpp
	include/fruitapp/gui/ce/table/view.hpp
	include/fruitapp/gui/create_system.hpp
	include/fruitapp/gui/dialogs/highscore.hpp
	include/fruitapp/gui/dialogs/highscore_fwd.hpp
	include/fruitapp/gui/dialogs/highscore_unique_ptr.hpp
	include/fruitapp/gui/dialogs/ingame_menu.hpp
	include/fruitapp/gui/dialogs/ingame_menu_fwd.hpp
	include/fruitapp/gui/dialogs/ingame_menu_unique_ptr.hpp
	include/fruitapp/gui/dialogs/main_menu.hpp
	include/fruitapp/gui/dialogs/main_menu_fwd.hpp
	include/fruitapp/gui/dialogs/main_menu_unique_ptr.hpp
	include/fruitapp/gui/dialogs/name_chooser.hpp
	include/fruitapp/gui/dialogs/name_chooser_fwd.hpp
	include/fruitapp/gui/dialogs/name_chooser_unique_ptr.hpp
	include/fruitapp/gui/dialogs/ranking.hpp
	include/fruitapp/gui/dialogs/ranking_fwd.hpp
	include/fruitapp/gui/dialogs/ranking_unique_ptr.hpp
	include/fruitapp/gui/dialogs/settings.hpp
	include/fruitapp/gui/dialogs/settings_fwd.hpp
	include/fruitapp/gui/dialogs/settings_unique_ptr.hpp
	include/fruitapp/gui/dummy/dialogs/ingame_menu.hpp
	include/fruitapp/gui/dummy/dialogs/main_menu.hpp
	include/fruitapp/gui/dummy/dialogs/name_chooser.hpp
	include/fruitapp/gui/dummy/dialogs/ranking.hpp
	include/fruitapp/gui/dummy/system.hpp
	include/fruitapp/gui/initial_effects_volume.hpp
	include/fruitapp/gui/initial_music_volume.hpp
	include/fruitapp/gui/sound_volume.hpp
	include/fruitapp/gui/system.hpp
	include/fruitapp/gui/system_fwd.hpp
	include/fruitapp/gui/system_unique_ptr.hpp
	include/fruitapp/highscore/callbacks/error_received.hpp
	include/fruitapp/highscore/callbacks/error_received_fn.hpp
	include/fruitapp/highscore/callbacks/list_received.hpp
	include/fruitapp/highscore/callbacks/list_received_fn.hpp
	include/fruitapp/highscore/callbacks/message_received.hpp
	include/fruitapp/highscore/callbacks/message_received_fn.hpp
	include/fruitapp/highscore/callbacks/rank_received.hpp
	include/fruitapp/highscore/callbacks/rank_received_fn.hpp
	include/fruitapp/highscore/entry.hpp
	include/fruitapp/highscore/entry_set.hpp
	include/fruitapp/highscore/entry_set_to_json.hpp
	include/fruitapp/highscore/get_model.hpp
	include/fruitapp/highscore/json_to_entry_set.hpp
	include/fruitapp/highscore/name.hpp
	include/fruitapp/highscore/post_model.hpp
	include/fruitapp/highscore/provider/connection_base.hpp
	include/fruitapp/highscore/provider/connection_base_fwd.hpp
	include/fruitapp/highscore/provider/connection_base_ptr.hpp
	include/fruitapp/highscore/provider/file/connection.hpp
	include/fruitapp/highscore/provider/file/object.hpp
	include/fruitapp/highscore/provider/identifier.hpp
	include/fruitapp/highscore/provider/net/connection.hpp
	include/fruitapp/highscore/provider/net/host.hpp
	include/fruitapp/highscore/provider/net/object.hpp
	include/fruitapp/highscore/provider/net/port.hpp
	include/fruitapp/highscore/provider/object_base.hpp
	include/fruitapp/highscore/provider/object_base_fwd.hpp
	include/fruitapp/highscore/provider_sequence.hpp
	include/fruitapp/highscore/providers_from_json.hpp
	include/fruitapp/highscore/rank.hpp
	include/fruitapp/highscore/score.hpp
	include/fruitapp/ingame_clock.hpp
	include/fruitapp/ingame_timer.hpp
	include/fruitapp/light_source_from_json.hpp
	include/fruitapp/load_user_config.hpp
	include/fruitapp/logo.hpp
	include/fruitapp/machine.hpp
	include/fruitapp/machine_fwd.hpp
	include/fruitapp/machine_impl.hpp
	include/fruitapp/machine_impl_fwd.hpp
	include/fruitapp/main.hpp
	include/fruitapp/name.hpp
	include/fruitapp/overlay.hpp
	include/fruitapp/point_sprite/base.hpp
	include/fruitapp/point_sprite/buffers.hpp
	include/fruitapp/point_sprite/choices.hpp
	include/fruitapp/point_sprite/collection.hpp
	include/fruitapp/point_sprite/color.hpp
	include/fruitapp/point_sprite/color_format.hpp
	include/fruitapp/point_sprite/connection.hpp
	include/fruitapp/point_sprite/elements.hpp
	include/fruitapp/point_sprite/object.hpp
	include/fruitapp/point_sprite/parameters.hpp
	include/fruitapp/point_sprite/size_attribute.hpp
	include/fruitapp/point_sprite/splatter/acceleration.hpp
	include/fruitapp/point_sprite/splatter/linear_velocity.hpp
	include/fruitapp/point_sprite/splatter/object.hpp
	include/fruitapp/point_sprite/splatter/parameters.hpp
	include/fruitapp/point_sprite/splatter/parameters_fwd.hpp
	include/fruitapp/point_sprite/splatter/position.hpp
	include/fruitapp/point_sprite/splatter/size.hpp
	include/fruitapp/point_sprite/system_node.hpp
	include/fruitapp/point_sprite/system_node_fwd.hpp
	include/fruitapp/point_sprite/type_choices.hpp
	include/fruitapp/point_sprite/unique_base_ptr.hpp
	include/fruitapp/point_sprite/vector.hpp
	include/fruitapp/postprocessing.hpp
	include/fruitapp/postprocessing_fwd.hpp
	include/fruitapp/projection_manager/object.hpp
	include/fruitapp/projection_manager/object_fwd.hpp
	include/fruitapp/projection_manager/projection_change_callback.hpp
	include/fruitapp/projection_manager/projection_change_callback_fn.hpp
	include/fruitapp/projection_manager/trigger_early.hpp
	include/fruitapp/quick_log.hpp
	include/fruitapp/quick_log_fwd.hpp
	include/fruitapp/renderable.hpp
	include/fruitapp/renderer_dim2.hpp
	include/fruitapp/renderer_rect.hpp
	include/fruitapp/scene.hpp
	include/fruitapp/scene_fwd.hpp
	include/fruitapp/scoped_pp_activation.hpp
	include/fruitapp/scoped_scene_activation.hpp
	include/fruitapp/scoped_time_factor.hpp
	include/fruitapp/screen_shooter.hpp
	include/fruitapp/shadow_map.hpp
	include/fruitapp/shadow_map_fwd.hpp
	include/fruitapp/shadow_map_texture.hpp
	include/fruitapp/shadow_mvp.hpp
	include/fruitapp/splatter_generator.hpp
	include/fruitapp/states/gameover/choose_name.hpp
	include/fruitapp/states/gameover/choose_name_fwd.hpp
	include/fruitapp/states/gameover/ranking.hpp
	include/fruitapp/states/gameover/ranking_fwd.hpp
	include/fruitapp/states/gameover/superstate.hpp
	include/fruitapp/states/gameover/superstate_fwd.hpp
	include/fruitapp/states/ingame/paused.hpp
	include/fruitapp/states/ingame/paused_fwd.hpp
	include/fruitapp/states/ingame/running.hpp
	include/fruitapp/states/ingame/running_fwd.hpp
	include/fruitapp/states/ingame/superstate.hpp
	include/fruitapp/states/ingame/superstate_fwd.hpp
	include/fruitapp/states/loading.hpp
	include/fruitapp/states/loading_fwd.hpp
	include/fruitapp/states/menu/highscore.hpp
	include/fruitapp/states/menu/highscore_fwd.hpp
	include/fruitapp/states/menu/main.hpp
	include/fruitapp/states/menu/main_fwd.hpp
	include/fruitapp/states/menu/settings.hpp
	include/fruitapp/states/menu/settings_fwd.hpp
	include/fruitapp/states/menu/superstate.hpp
	include/fruitapp/states/menu/superstate_fwd.hpp
	include/fruitapp/sword_trail.hpp
	include/fruitapp/systems.hpp
	include/fruitapp/viewport/change_callback.hpp
	include/fruitapp/viewport/change_callback_fn.hpp
	include/fruitapp/viewport/manager.hpp
	include/fruitapp/viewport/manager_fwd.hpp
	include/fruitapp/viewport/optional.hpp
	include/fruitapp/viewport/trigger_early.hpp
	src/fruitapp/asio_implementation.cpp
	src/fruitapp/background.cpp
	src/fruitapp/config_variables.cpp
	src/fruitapp/current_commit.cpp
	src/fruitapp/cursor_sound.cpp
	src/fruitapp/cursor_trail.cpp
	src/fruitapp/directional_light_source.cpp
	src/fruitapp/exception.cpp
	src/fruitapp/fruit/cut_context.cpp
	src/fruitapp/fruit/cut_mesh.cpp
	src/fruitapp/fruit/cut_mesh_result.cpp
	src/fruitapp/fruit/default_render_node.cpp
	src/fruitapp/fruit/hull/projected.cpp
	src/fruitapp/fruit/hull/trail_intersection.cpp
	src/fruitapp/fruit/manager.cpp
	src/fruitapp/fruit/material/from_json.cpp
	src/fruitapp/fruit/material/object.cpp
	src/fruitapp/fruit/mesh.cpp
	src/fruitapp/fruit/mesh_to_point_cloud.cpp
	src/fruitapp/fruit/mesh_to_shape.cpp
	src/fruitapp/fruit/mesh_to_vertex_buffer.cpp
	src/fruitapp/fruit/model_to_mesh.cpp
	src/fruitapp/fruit/object.cpp
	src/fruitapp/fruit/object_from_prototype.cpp
	src/fruitapp/fruit/prototype.cpp
	src/fruitapp/fruit/prototype_from_json.cpp
	src/fruitapp/fruit/shadow_render_node.cpp
	src/fruitapp/fruit/spawner.cpp
	src/fruitapp/game_logic/object.cpp
	src/fruitapp/gui/ce/button.cpp
	src/fruitapp/gui/ce/combobox.cpp
	src/fruitapp/gui/ce/dialogs/highscore.cpp
	src/fruitapp/gui/ce/dialogs/ingame_menu.cpp
	src/fruitapp/gui/ce/dialogs/main_menu.cpp
	src/fruitapp/gui/ce/dialogs/name_chooser.cpp
	src/fruitapp/gui/ce/dialogs/ranking.cpp
	src/fruitapp/gui/ce/dialogs/settings.cpp
	src/fruitapp/gui/ce/progress_slider.cpp
	src/fruitapp/gui/ce/system.cpp
	src/fruitapp/gui/ce/table/column.cpp
	src/fruitapp/gui/ce/table/model.cpp
	src/fruitapp/gui/ce/table/view.cpp
	src/fruitapp/gui/create_system.cpp
	src/fruitapp/gui/dialogs/highscore.cpp
	src/fruitapp/gui/dialogs/ingame_menu.cpp
	src/fruitapp/gui/dialogs/main_menu.cpp
	src/fruitapp/gui/dialogs/name_chooser.cpp
	src/fruitapp/gui/dialogs/ranking.cpp
	src/fruitapp/gui/dialogs/settings.cpp
	src/fruitapp/gui/dummy/dialogs/ingame_menu.cpp
	src/fruitapp/gui/dummy/dialogs/main_menu.cpp
	src/fruitapp/gui/dummy/dialogs/name_chooser.cpp
	src/fruitapp/gui/dummy/dialogs/ranking.cpp
	src/fruitapp/gui/dummy/system.cpp
	src/fruitapp/gui/system.cpp
	src/fruitapp/highscore/entry.cpp
	src/fruitapp/highscore/entry_set_to_json.cpp
	src/fruitapp/highscore/get_model.cpp
	src/fruitapp/highscore/json_to_entry_set.cpp
	src/fruitapp/highscore/post_model.cpp
	src/fruitapp/highscore/provider/connection_base.cpp
	src/fruitapp/highscore/provider/file/connection.cpp
	src/fruitapp/highscore/provider/file/object.cpp
	src/fruitapp/highscore/provider/net/connection.cpp
	src/fruitapp/highscore/provider/net/object.cpp
	src/fruitapp/highscore/provider/object_base.cpp
	src/fruitapp/highscore/providers_from_json.cpp
	src/fruitapp/light_source_from_json.cpp
	src/fruitapp/load_user_config.cpp
	src/fruitapp/logo.cpp
	src/fruitapp/machine.cpp
	src/fruitapp/machine_impl.cpp
	src/fruitapp/main.cpp
	src/fruitapp/name.cpp
	src/fruitapp/overlay.cpp
	src/fruitapp/point_sprite/base.cpp
	src/fruitapp/point_sprite/splatter/object.cpp
	src/fruitapp/point_sprite/splatter/parameters.cpp
	src/fruitapp/point_sprite/system_node.cpp
	src/fruitapp/postprocessing.cpp
	src/fruitapp/projection_manager/object.cpp
	src/fruitapp/quick_log.cpp
	src/fruitapp/renderable.cpp
	src/fruitapp/scene.cpp
	src/fruitapp/scoped_pp_activation.cpp
	src/fruitapp/scoped_scene_activation.cpp
	src/fruitapp/scoped_time_factor.cpp
	src/fruitapp/screen_shooter.cpp
	src/fruitapp/shadow_map.cpp
	src/fruitapp/splatter_generator.cpp
	src/fruitapp/states/gameover/choose_name.cpp
	src/fruitapp/states/gameover/ranking.cpp
	src/fruitapp/states/gameover/superstate.cpp
	src/fruitapp/states/ingame/paused.cpp
	src/fruitapp/states/ingame/running.cpp
	src/fruitapp/states/ingame/superstate.cpp
	src/fruitapp/states/loading.cpp
	src/fruitapp/states/menu/highscore.cpp
	src/fruitapp/states/menu/main.cpp
	src/fruitapp/states/menu/settings.cpp
	src/fruitapp/states/menu/superstate.cpp
	src/fruitapp/sword_trail.cpp
	src/fruitapp/viewport/manager.cpp
)

fcppt_utils_add_source_groups(
  "${APP_FILES}")

# library begin
add_library(
	fruitlib STATIC ${FRUITLIB_FILES})

target_link_libraries(
	fruitlib
	${Fcppt_core_LIBRARIES}
	${Fcppt_filesystem_LIBRARIES}
	${CEGUI_LIBRARIES}
	${SGE_LIBRARIES}
	${Cg_LIBRARIES}
	${BULLET_LIBRARIES}
	${Boost_LIBRARIES})
# library end

# app begin
awl_utils_add_portable_executable(
	fruitcut
	"fruitapp::main"
	${APP_FILES})

target_link_libraries(
	fruitcut
	fruitlib

	${SGE_LIBRARIES}
	${Cg_LIBRARIES}

	${FcpptThreads_LIBRARIES}

	${Fcppt_core_LIBRARIES}
	${Fcppt_filesystem_LIBRARIES}
	${Awl_LIBRARIES}
	${CEGUI_LIBRARIES}
	${BULLET_LIBRARIES}
	${Boost_LIBRARIES})

install(
	TARGETS
	fruitcut
	DESTINATION
	${INSTALL_BINARY_DIR}
)
# app end

# server begin
option(ENABLE_SERVER "Build the server (beware: it's POSIX only!)" OFF)

# this has to be defined here so update_cmake recognizes it
set(
	SERVER_FILES
	include/fruitserver/ascii/char.hpp
	include/fruitserver/ascii/char_traits.hpp
	include/fruitserver/ascii/from_byte_sequence.hpp
	include/fruitserver/ascii/from_native.hpp
	include/fruitserver/ascii/from_native_char.hpp
	include/fruitserver/ascii/is_digit.hpp
	include/fruitserver/ascii/is_letter.hpp
	include/fruitserver/ascii/string.hpp
	include/fruitserver/ascii/to_byte_sequence.hpp
	include/fruitserver/ascii/to_native.hpp
	include/fruitserver/ascii/to_native_char.hpp
	include/fruitserver/ascii/to_native_translation.hpp
	include/fruitserver/byte_sequence.hpp
	include/fruitserver/command.hpp
	include/fruitserver/command_processor.hpp
	include/fruitserver/command_processor_fwd.hpp
	include/fruitserver/controller.hpp
	include/fruitserver/current_datetime.hpp
	include/fruitserver/format_output_size.hpp
	include/fruitserver/generate_datetime.hpp
	include/fruitserver/highscore_entry.hpp
	include/fruitserver/highscore_from_plain_file.hpp
	include/fruitserver/highscore_sequence.hpp
	include/fruitserver/highscore_to_json.hpp
	include/fruitserver/highscore_to_plain_file.hpp
	include/fruitserver/lexical_cast.hpp
	include/fruitserver/listener/base.hpp
	include/fruitserver/listener/base_fwd.hpp
	include/fruitserver/listener/callbacks/connect.hpp
	include/fruitserver/listener/callbacks/connect_fn.hpp
	include/fruitserver/listener/callbacks/disconnect.hpp
	include/fruitserver/listener/callbacks/disconnect_fn.hpp
	include/fruitserver/listener/callbacks/receive_data.hpp
	include/fruitserver/listener/callbacks/receive_data_fn.hpp
	include/fruitserver/listener/posix_select.hpp
	include/fruitserver/logger.hpp
	include/fruitserver/output_tm.hpp
	include/fruitserver/parse_command.hpp
	include/fruitserver/path.hpp
	include/fruitserver/program_options/command_line_parameters.hpp
	include/fruitserver/program_options/detail/bad_cast.hpp
	include/fruitserver/program_options/detail/holder_get.hpp
	include/fruitserver/program_options/detail/option_base.hpp
	include/fruitserver/program_options/detail/option_holder.hpp
	include/fruitserver/program_options/detail/option_holder_base.hpp
	include/fruitserver/program_options/detail/option_holder_base_fwd.hpp
	include/fruitserver/program_options/detail/option_holder_base_ptr.hpp
	include/fruitserver/program_options/detail/type_info.hpp
	include/fruitserver/program_options/help_was_needed.hpp
	include/fruitserver/program_options/make_command_line_parameters.hpp
	include/fruitserver/program_options/object.hpp
	include/fruitserver/program_options/option.hpp
	include/fruitserver/program_options/option_sequence.hpp
	include/fruitserver/score.hpp
	include/fruitserver/separator.hpp
	include/fruitserver/std_error_string.hpp
	src/fruitserver/ascii/from_ascii_char.cpp
	src/fruitserver/ascii/from_byte_sequence.cpp
	src/fruitserver/ascii/from_native.cpp
	src/fruitserver/ascii/is_digit.cpp
	src/fruitserver/ascii/is_letter.cpp
	src/fruitserver/ascii/to_byte_sequence.cpp
	src/fruitserver/ascii/to_native.cpp
	src/fruitserver/ascii/to_native_char.cpp
	src/fruitserver/ascii/to_native_translation.cpp
	src/fruitserver/command_processor.cpp
	src/fruitserver/controller.cpp
	src/fruitserver/current_datetime.cpp
	src/fruitserver/generate_datetime.cpp
	src/fruitserver/highscore_entry.cpp
	src/fruitserver/highscore_from_plain_file.cpp
	src/fruitserver/highscore_to_json.cpp
	src/fruitserver/highscore_to_plain_file.cpp
	src/fruitserver/listener/base.cpp
	src/fruitserver/listener/posix_select.cpp
	src/fruitserver/output_tm.cpp
	src/fruitserver/parse_command.cpp
	src/fruitserver/program_options/detail/bad_cast.cpp
	src/fruitserver/program_options/detail/option_base.cpp
	src/fruitserver/program_options/detail/option_holder_base.cpp
	src/fruitserver/program_options/detail/type_info.cpp
	src/fruitserver/program_options/help_was_needed.cpp
	src/fruitserver/program_options/make_command_line_parameters.cpp
	src/fruitserver/program_options/object.cpp
	src/fruitserver/program_options/option_sequence.cpp
	src/fruitserver/separator.cpp
	src/fruitserver/server.cpp
	src/fruitserver/std_error_string.cpp
)

if(ENABLE_SERVER)

	fcppt_utils_add_source_groups("${SERVER_FILES}")

	add_executable(
		fruitcut_server
		${SERVER_FILES})

	install(
		TARGETS
		fruitcut_server
		DESTINATION
		${INSTALL_BINARY_DIR}
	)
endif()
# server end
